# Voodoo

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Palette.txt  README  README.md  VKX.sublime-project  app-config.json
Assets/: lost-empire-rgba.asset  lost-empire.asset  monkey-smooth.asset
Engine/: App.cpp  App.h  BlockList.h  CMakeLists.txt  DeletionQueue.h  DescriptorAllocator.h  DescriptorBuilder.cpp  DescriptorBuilder.h  DescriptorLayoutCache.cpp  DescriptorLayoutCache.h  ECS.cpp  ECS.h  ECSTypes.cpp  ECSTypes.h  Editor.h  Engine.cpp  Engine.h  EngineTypes.h  ImmediateDrawQueue.cpp  ImmediateDrawQueue.h  Input.cpp  Input.h  IntrusiveList.h  Main.cpp  Mesh.cpp  Mesh.h  PipelineBuilder.cpp  PipelineBuilder.h  RenderObject.h  SystemDescriptor.h  TestSystem.h  TransformSystem.h  VMA.cpp  VMA.h  VulkanCommon.cpp  VulkanCommon.h  Win32ImGUI.cpp  Win32ImGUI.h  Window.cpp  Window.h  (+2 more)
Engine/AssetLibrary/: AssetLibrary.cpp  AssetLibrary.h  CMakeLists.txt
Engine/AssetLibrary/Importers/: DefaultImporters.h  StbImage.cpp  TinyOBJLoader.cpp
Engine/AssetLibrary/Tests/: AssetLibrary.test.cpp  CMakeLists.txt
Engine/Core/: Archive.cpp  BlockList.h  CMakeLists.txt  Core.cpp  IntrusiveList.h  KVar.h  MathTypes.h  Utility.cpp
Engine/Core/ECS/: Archetype.h  Component.cpp  Component.h  Entity.h  System.h  World.cpp  World.h
Engine/Core/Tests/: Archive.test.cpp  CMakeLists.txt  ECS.basic.test.cpp
Engine/ECS/: Component.h  Entity.h  World.cpp  World.h
Engine/Editor/: ColorScheme.h  Editor.cpp  Editor.h  Gizmos.cpp  Gizmos.h  HierarchyEditorWindow.cpp  HierarchyEditorWindow.h  InspectorEditorWindow.cpp  InspectorEditorWindow.h  MenuRegistrar.cpp  MenuRegistrar.h  ModelToVertexArrayEditorWindow.cpp  ModelToVertexArrayEditorWindow.h  QueryEditorWindow.cpp  QueryEditorWindow.h  WorldViewEditorWindow.cpp  WorldViewEditorWindow.h
Engine/Tests/: BlockList.test.cpp  CMakeLists.txt  ECS.basic.test.cpp
Engine/Window/: GLFWWindow.cpp  GLFWWindow.h  Win32DnD.cpp  Win32DnD.h  Win32ImGUI.cpp  Win32Vulkan.cpp  Win32Vulkan.h  Win32Window.cpp  Win32Window.h  Window.h
Metacompiler/: CMakeLists.txt  Internal.h  Main.cpp
Scripts/: 0.0 - Build.bat  0.1 - Configure - Ninja.bat  0.1 - Configure.bat  0.2 - Run.bat  0.3 - Build Shaders.bat  2.0 - Run Lib Tests.bat  2.0 - Run Tests.bat  Build - Release.bat  CompileShaders.bat  Configure - Release.bat  Run.bat
Shaders/: Basic.frag  Basic.vert  CMakeLists.txt  Immediate.frag  Immediate.vert  Present.frag  Present.vert  Textured.frag  colored_lit.frag  tri_mesh_ssbo_instanced.vert
Source/: CMakeLists.txt
Source/AssetLibrary/: AssetLibrary.cpp  AssetLibrary.h  CMakeLists.txt
Source/AssetLibrary/Importers/: DefaultImporters.h  StbImage.cpp  TinyOBJLoader.cpp
Source/AssetLibrary/Tests/: AssetLibrary.test.cpp  CMakeLists.txt
Source/Core/: Archive.cpp  Archive.h  BlockList.h  CMakeLists.txt  Color.h  DeletionQueue.h  Handle.h  MathTypes.h  Utility.h
Source/Core/Tests/: Archive.test.cpp  BlockList.test.cpp  CMakeLists.txt  Handle.test.cpp  Tests.cpp
Source/Doll/: CMakeLists.txt  Doll.cpp  Doll.h  HelpAction.cpp  PreprocessAction.cpp  PreprocessAction.h
Source/ECS/: CMakeLists.txt  ComponentDescriptor.cpp  ComponentDescriptor.h  ECS.cpp  ECS.h  ECSTypes.cpp  ECSTypes.h  SystemDescriptor.cpp  SystemDescriptor.h  TestSystem.cpp  TestSystem.h  TransformSystem.cpp  TransformSystem.h  WorldSerializer.cpp  WorldSerializer.h
Source/Editor/: CMakeLists.txt  ColorScheme.h  Editor.cpp  Editor.h  HierarchyEditorWindow.h  InspectorEditorWindow.cpp  InspectorEditorWindow.h  Layout.h  Main.cpp  MenuRegistrar.cpp  MenuRegistrar.h  ModelToVertexArrayEditorWindow.cpp  ModelToVertexArrayEditorWindow.h  Project.cpp  Project.h  ProjectEditorWindow.cpp  ProjectEditorWindow.h  QueryEditorWindow.cpp  SearchWorldEditorWindow.cpp  SearchWorldEditorWindow.h  Win32ImGUI.cpp  WorldViewEditorWindow.cpp
Source/Engine/: AssetManager.cpp  AssetManager.h  AssetSystem.cpp  AssetSystem.h  BatchSystem.h  CMakeLists.txt  Engine.cpp  Engine.h  EngineConfig.h  Main.cpp  Main.h  Module.h  ModuleSystem.cpp  ModuleSystem.h  SubsystemManager.cpp  SubsystemManager.h  VulkanCommon.h  WorldRenderSystem.cpp  WorldRenderSystem.h
Source/Engine/Renderer/: DescriptorAllocator.cpp  DescriptorBuilder.cpp  DescriptorLayoutCache.h  ImmediateDrawQueue.cpp  Mesh.h  Renderer.cpp  Renderer.h  VMA.h
Source/Engine/Window/: GLFWWindow.cpp  GLFWWindow.h  Win32DnD.cpp  Win32ImGUI.h  Win32Vulkan.h  Win32Window.cpp  Win32Window.h  Window.h
Source/Modules/Builtin/: Builtin.cpp  Builtin.h  CMakeLists.txt  WorldRenderSubsystem.cpp  WorldRenderSubsystem.h  WorldRenderSystem.cpp  WorldRenderSystem.h
Source/Renderer/: CMakeLists.txt  DescriptorAllocator.cpp  DescriptorAllocator.h  DescriptorBuilder.cpp  DescriptorBuilder.h  DescriptorLayoutCache.cpp  DescriptorLayoutCache.h  ImmediateDrawQueue.cpp  ImmediateDrawQueue.h  MaterialSystem.cpp  MaterialSystem.h  Mesh.cpp  Mesh.h  PipelineBuilder.cpp  PipelineBuilder.h  RenderObject.h  Renderer.cpp  Renderer.h  RendererTypes.h  Shader.cpp  Shader.h  TextureSystem.cpp  TextureSystem.h  VMA.cpp  VMA.h
Source/Standalone/: CMakeLists.txt  Main.cpp
Source/VulkanCommon/: CMakeLists.txt  VulkanCommon.cpp  VulkanCommon.h
Source/Window/: CMakeLists.txt  GLFWWindow.cpp  Input.cpp  Input.h  Win32DnD.cpp  Win32Vulkan.cpp  Win32Window.cpp  Window.cpp  Window.h
